form and styles done

--- a/src/2-form.html
+++ b/src/2-form.html
@@ -17,6 +17,21 @@
           Form
         </h1>
       </div>
+
+      <form class="feedback-form" autocomplete="off">
+        <div class="form-group">
+  <label class="form-label">
+    Email
+    <input class="form-input" type="email" name="email" autofocus />
+  </label>
+  <label class="form-label">
+    Message
+    <textarea class="form-textarea" name="message" rows="8"></textarea>
+  </label>
+  </div>
+  <button class="submit-btn" type="submit">Submit</button>
+</form>
+
     </main>
 
      <script type="module" src="./js/2-form.js"></script>
